fixed bug that made bootstrap modal shift content when modal opens

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ html {
   overflow-y: scroll;
 }
 
+html, body{
+  padding: 0 !important;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
